---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - The numbers shown on item/machine/etc-buttons are now rounded somewhat correctly, instead of being truncated
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 0.18.32
Date: 15. 06. 2020
  Changes:
    - Improved some things about how product definitions by belt/lane are handled. Changing timescales now also better preserves the precision of the numbers you enter.
  Bugfixes:
    - Fixed several problems leading to incorrect results when using productivity modules
    - Fixed that the top level products wouldn't update their numbers when in belts/lanes-view and changing the preferred belt

---------------------------------------------------------------------------------------------------
Version: 0.18.31
Date: 12. 06. 2020
  Features:
    - You can now alt-click a machine in preferences to set that exact machine in every other category that has it.
  Bugfixes:
    - Fixed a problem where productivity modules would not apply correctly to some modded ingredients

---------------------------------------------------------------------------------------------------
Version: 0.18.30
Date: 12. 06. 2020
  Bugfixes:
    - Fixed that crafting machines producing more than 1 item/tick would show incorrect results, especially when productivity was involved. Thanks a lot to curiosity for helping me figure this one out.
    - Fixed a bug where using productivity on certain recipes (like koravex enrichment) would not produce correct results
    - Fixed a bug where byproducts produced on a subfloor were not incorporated correctly on their parent floor
    - Fixed a bug where a recipe line's byproducts were not consumed by the fuel that that line needed
