@@ -24,7 +24,6 @@ fp_focus_searchfield=Focuses the cursor on the searchfield of the product picker
 
 [mod-setting-name]
 fp_display_gui_button=Display open/close-button [img=info]
-fp_pause_on_interface=Pause on open interface [img=info]
 fp_subfactory_items_per_row=Interface-width [img=info]
 fp_floor_recipes_at_once=Interface-height [img=info]
 fp_alt_action=Alt action [img=info]
@@ -34,7 +33,6 @@ fp_indicate_rounding=Machine rounding precision [img=info]
 
 [mod-setting-description]
 fp_display_gui_button=Shows the button on the top left of the screen. It opens and closes the main interface.
-fp_pause_on_interface=Makes it so the game gets paused every time you open the interface of the mod (Singleplayer only).
 fp_subfactory_items_per_row=Set the main interface width by choosing how many top-level items (ingredients / products / byproducts) are shown per row.
 fp_floor_recipes_at_once=Set the main interface height by choosing how many recipe lines you want to see without scrolling.
 fp_alt_action=Select an action when alt-clicking any item- or recipe-button. Currently works with FNEI, WIIRUF and Recipe Book. The mod has to be installed and enabled before it shows up in this list.
@@ -113,6 +111,7 @@ subfactories=subfactories
 floor=Floor
 
 # Misc
+pause_on_interface=Toggle to automatically pause the game in the background when the main interface is open (Singleplayer only)\n- Press __CONTROL__fp_toggle_pause__ to toggle pause -
 production_info=Add a product and left-click it to add a recipe
 sprite_missing=The current icon is from a mod that is not active
 line_percentage_tooltip=This percentage determines how much of the demand for the products that this recipe produces should actually be fulfilled by this recipe. The calculation only updates after you confirm your changes by pressing [font=default-semibold][color=#84CDEC]Enter[/color][/font].
